--- a/META.yml
+++ b/META.yml
@@ -1,22 +1,25 @@
---- #YAML:1.0
-name:               MediaWiki-EditFramework
-version:            0.01
-abstract:           a framework for editing MediaWiki pages.
+---
+abstract: 'a framework for editing MediaWiki pages.'
 author:
-    - Steve Sanbeg <sanbeg@cpan.org>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Steve Sanbeg <sanbeg@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    MediaWiki::API:  0.17
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
+  Storable: 0
+  Test::MockModule: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: MediaWiki-EditFramework
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  MediaWiki::API: 0.17
+resources:
+  repository: https://github.com/sanbeg/MediaWiki-EditFramework
+version: 0.02
